plugins {
    id 'com.android.application'
}

android {
    compileSdk 34
    flavorDimensions = ["default"]

    defaultConfig {
        applicationId "com.fongmi.android.tv"
        minSdk 16
        targetSdk 28
        versionCode 219
        versionName "2.1.9"
        multiDexEnabled true
        ndk { abiFilters "armeabi-v7a" }
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    productFlavors {
        leanback {
            dimension "default"
        }
    }

    buildFeatures {
        viewBinding true
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    packagingOptions {
        exclude 'META-INF/beans.xml'
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    android.applicationVariants.configureEach { variant ->
        variant.outputs.configureEach { output ->
            outputFileName = "${variant.productFlavors[0].name}.apk"
        }
    }

    configurations.configureEach {
        resolutionStrategy {
            force 'com.squareup.okhttp3:okhttp:' + okhttpVersion
            force 'com.squareup.okio:okio:' + okioVersion
            force 'org.seamless:seamless-swing:1.1.1'
            force 'org.seamless:seamless-http:1.1.1'
            force 'org.seamless:seamless-util:1.1.1'
            force 'org.seamless:seamless-xml:1.1.1'
        }
    }

    lint {
        disable 'UnsafeOptInUsageError'
    }
}

dependencies {
    implementation project(':hook')
    implementation project(':tvbus')
    implementation project(':catvod')
    implementation project(':danmaku')
    implementation project(':pyramid')
    implementation project(':quickjs')
    implementation project(':thunder')
    implementation project(':jianpian')
    implementation project(':forcetech')
    implementation project(':ijkplayer')
    implementation project(':media-lib-database')
    implementation project(':media-lib-datasource')
    implementation project(':media-lib-datasource-okhttp')
    implementation project(':media-lib-datasource-rtmp')
    implementation project(':media-lib-decoder-av1')
    implementation project(':media-lib-decoder-ffmpeg')
    implementation project(':media-lib-exoplayer')
    implementation project(':media-lib-exoplayer-dash')
    implementation project(':media-lib-exoplayer-hls')
    implementation project(':media-lib-exoplayer-rtsp')
    implementation project(':media-lib-exoplayer-smoothstreaming')
    implementation project(':media-lib-extractor')
    implementation project(':media-lib-session')
    implementation project(':media-lib-ui')
    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.20')
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.biometric:biometric:1.1.0'
    implementation 'androidx.leanback:leanback:1.2.0-alpha04'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.2'
    implementation 'androidx.room:room-runtime:2.6.1'
    implementation 'cat.ereza:customactivityoncrash:2.4.0'
    implementation 'com.github.bassaer:materialdesigncolors:1.0.0'
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    implementation 'com.github.bumptech.glide:annotations:4.16.0'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.16.0'
    implementation 'com.github.jahirfiquitiva:TextDrawable:1.0.3'
    implementation('com.github.TeamNewPipe:NewPipeExtractor:v0.23.1') { exclude group: 'org.jsoup', module: 'jsoup' }
    implementation 'com.github.thegrizzlylabs:sardine-android:0.8'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'com.google.net.cronet:cronet-okhttp:0.1.0'
    implementation 'com.google.zxing:core:3.3.0'
    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
    implementation 'me.jessyan:autosize:1.2.1'
    implementation 'com.hierynomus:smbj:0.11.5'
    implementation 'org.chromium.net:cronet-embedded:76.3809.111'
    implementation 'org.eclipse.jetty:jetty-server:8.1.22.v20160922'
    implementation 'org.eclipse.jetty:jetty-servlet:8.1.22.v20160922'
    implementation 'org.eclipse.jetty:jetty-client:8.1.22.v20160922'
    implementation 'org.fourthline.cling:cling-core:2.1.2'
    implementation 'org.fourthline.cling:cling-support:2.1.2'
    implementation 'org.greenrobot:eventbus:3.3.1'
    implementation('org.simpleframework:simple-xml:2.7.1') { exclude group: 'stax', module: 'stax-api' exclude group: 'xpp3', module: 'xpp3' }
    implementation(ext: 'aar', name: 'dlna-core', group: 'fongmi', version: 'release')
    implementation(ext: 'aar', name: 'dlna-dmr', group: 'fongmi', version: 'release')
    annotationProcessor 'androidx.room:room-compiler:2.6.1'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
}